--- a/musicBBS/src/main/webapp/bbs_front/css/base.css
+++ b/musicBBS/src/main/webapp/bbs_front/css/base.css
@@ -38,7 +38,8 @@
 .baseCon_son{
     width: 300px;
     height: 36px;
-    border: 1px solid #e8e8e8;
+/*     border: 1px solid #e8e8e8; */
+    border: 1px solid #333;
     border-radius: 5px;
     margin-bottom: 30px;
 }
